# fastmpc-fastapi

backend/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/app/: agent_logic.py  aws_secretes.py  celery_tasks.py  logger.py  main.py  mcp_server.py  middleware.py  pinecone_client.py  routes.py  schemas.py
